@@ -54,13 +54,12 @@
 # If you want to use UMFPACK (part of SparseSuite), uncomment the next 
 # line:
 # 
- umfpack=yes
+# umfpack=yes
 #
 # If you want to specify the path to SparseSuite, uncomment the next 
 # line and give the correct path to SparseSuite here. For example:
 #
 # suitesparse_dir="/dir/to/SuiteSparse"
-suitesparse_dir="/Users/zhangcs/Packages/SuiteSparse"
 #
 #-------------------------------------------------------------------------
 # If you want to use SuperLU, uncomment the next line:
